--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql.c5g80y08oixn.ap-northeast-2.rds.amazonaws.com:3306/walking_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql.cdyg2w4qwyp6.ap-northeast-2.rds.amazonaws.com:3306/walking_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=walking
 spring.datasource.password=walking
 
