--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,13 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-#한글처리
+#íê¸ì²ë¦¬
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # devTools
-#자동 재시작 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
+#ìë ì¬ìì ê¸°ë¥ì íì±ííê±°ë ë¹íì±íí©ëë¤. ê¸°ë³¸ê°ì trueìëë¤.
 spring.devtools.livereload.enabled=true 
-#라이브 리로드 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
+#ë¼ì´ë¸ ë¦¬ë¡ë ê¸°ë¥ì íì±ííê±°ë ë¹íì±íí©ëë¤. ê¸°ë³¸ê°ì trueìëë¤.
 spring.devtools.restart.enabled=true
